--- a/ICML_workshop_submission/icml2015stylefiles/DFD.tex
+++ b/ICML_workshop_submission/icml2015stylefiles/DFD.tex
@@ -46,7 +46,7 @@
 
 % The \icmltitle you define below is probably too long as a header.
 % Therefore, a short form for the running title is supplied here:
-\icmltitlerunning{Submission and Formatting Instructions for ICML 2015}
+\icmltitlerunning{Under review as a conference paper for ICML 2016 workshop on Human Interpretability in Machine Learning}
 
 \begin{document} 
 
